--- a/app/src/main/res/values/developer-config.xml
+++ b/app/src/main/res/values/developer-config.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1Ijoia2FwaWxncnYiLCJhIjoiY2xxZG9rcnFpMGk1YzJxdGtmZGswYnQ1eSJ9._thozXyqT_2gaJFSQbDvBQ</string>
+    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">pk.eyJ1Ijoia2FwaWxncnYiLCJhIjoiY2s3MXBlczU4MDhzdTNvbXdodmE0ZWlpcSJ9.7_douVAa6rvxt-cCHWsq2Q</string>
 </resources>
